--- a/python_cypher/index.html
+++ b/python_cypher/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to Cypher for Python’s documentation! &mdash; Cypher for Python 0.1 documentation</title>
+    <title>Welcome to Cypher for Python &mdash; Cypher for Python 0.1 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
